--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,6 +5,7 @@
     <body>
         <div>
             <h1><a href="/">Django Girls Blog</a></h1>
+            <p><a href=>Blog creado en el taller de Django Girls Colombia</a></p>
         </div>
 
         {% for post in posts %}
